--- a/Cohesion_Project/Frm_Main.resx
+++ b/Cohesion_Project/Frm_Main.resx
@@ -120,32 +120,32 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAOwAAADsAXkocb0AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAFZklEQVRYR6WX308cVRTH901NDPqi1j+AvoD8qBJ2ZtmyQAEXkMICLdAGkQqFao2/Nf6q1Vp/FNtC
-        WgqlaIuAFCn9IZDWNqHUxGqfTJQ2vvuEbwUSytw7x++ZnV1mh5lhm97km3tnEvZ85tzzPffiS3bQUDiF
-        vitskP3Bfv2Ecks/5p+X7yq63KuQbPdL+bJ/Ubb474hmtZvagk+bf/bgg0bLNsqR0gE5WLykf19Aen+Q
-        5GEE/QR6C3oValVINEHboSqoTCGtUv1Hq84tNn/m/geN1T0if6rqlKMVmhx+ngBABsC3CLjfT/IDB4BG
-        rJER0QEVqaTlQQXKHxQKPW7+bHKDfm5Mledr/gIAAYDiAD1B0r9CcDtAO/SaQjq/ex96HQBbEDwAPWdo
-        gVQ1y/x577EyXZ8tLm2fF+drKAHgdCHpRxEkBvAR1p9BX/I76HOIt+UdKAKAQgvAM1BmQNxTc2vNMM6D
-        fmlOFVM75wFAVgD9TBGh8Eg/4jcAjIDHMHdhBoD8GPM+iDNQj+BhB4A0lVYyAoI25WaY4RIHzTQ/LC83
-        /SmmdlAUIEI6vlwfyCe9T0X6EZABDiFQD3Qca2TAsQitADkqiRCeuR4AoWUpi5TlUBPatZZOcbmJDIAL
-        20jwnnNwVH0coBtzH557AYAMuLrACsBrzkoEa8WEyFZmzbDRsXytdaO42qLFAOSP5SS54hngVD7WITgA
-        NWDa0ADoThKgAhmIAfAzA6SresJWiOttAwAgBpAXt5E8UxwtvNEXEl1gBehKEiAXKkFfKMBs1oKhDPVv
-        Izj9vjdFu962FAMQEyg+aI0LjC1BJk7kkYQb5L4kASxFaNVKmkKUFtrgE7/uadBm2igOEC9Cqwu24Kux
-        /6YLXBsRA1RDSLlsRuqbsX4RqkMGuDFlJkLIDPWoT9zo6PcC0AcR3OoCDwCJYMY7Fp8RbSZArAbCUJYF
-        Il297dNudNxyBRgqTXSBBwAH09GcjE7oBlAOhRIAFhjgvzUAF2qjwe02dAHQ0Xr1T7F+G+JO6AXALXo1
-        C9InJndIcameJAcdryLBFsSex23IACcD0RrogtCI5AEIAY3Wi7X+NeZXEIRroAZrnAueAM/GAcgnx6tJ
-        jlWi2BB4JEzyh5I4AFe+8c7JhtwJuRXjdGQAsQsyXSB3rwOwyQowEZFrAYpJnIX97Db0AODU83EsdmL9
-        pgcAu2HVltKH1C9YAcRImXsf8ACIn4ax4E4AJVCiCxZ84krTFTHVSGKygeQkZoc+YAfgG5H+BcSn4HvQ
-        GwjGlxB8vah1AOCtibVhi2R6YA59oL1+vUYUB+hHUXIRujWiWPrtLtiMRmQLHpVyGMfwnkcBsBgH4Cyc
-        ixg1oGNLdNQEf7nsy3O2IVc8HMC3IP1DzPY+ACjXVpxe9JRxHoiZ1lMGANtxCF9rt6G9DxyADvEzgtpr
-        wA6wwxkAh9EdIziP5dndqagBYbehIwAHjF1InIrQCvCSeQY4AWQH883w0aFPRG56AnAj6sV6PRfEALD3
-        Wh7kdBpmB26aYVcHXa17TJ6tWIoD8D1wGEBsy+HS5G3IAC1IvdtxnKnepdxwihk2cdC5SA4q3tgKMRG5
-        /z6Aw0gg7a73gUxVUE6O9/UcDqgUF+v+XbcR8a2Y+8FBfDH6Ae+50QldLiQrCH4v4I+YYbwHTdc9gZvR
-        rCNAL+z4DVzARy/vtf1C4gAgcpD2oMt13G3QdPghOb51PwAW4wAnNyPdtj7gBcBX8ULlN9c9T2bQWNkG
-        FGGPHAgte11IrABaOd5tVW9r1TarPcigQfVJOp7XiX2fEwf9d7Hv0riAMAD/e96qLmi7lDmtWTlCDWaH
-        W3f4fP8DCI7frK6lhiAAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        7AAAAOwBeShxvQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAVmSURBVFhHpZff
+        TxxVFMf3TU0M+qLWP4C+gPyoEnZm2bJAAReQwgIt0AaRCoVqjb81/qrVWn8U20JaCqVoi4AUKf0hkNY2
+        odTEap9MlDa++4RvBRLK3DvH75mdXWaHmWGb3uSbe2cS9nzm3PM99+JLdtBQOIW+K2yQ/cF+/YRySz/m
+        n5fvKrrcq5Bs90v5sn9RtvjviGa1m9qCT5t/9uCDRss2ypHSATlYvKR/X0B6f5DkYQT9BHoLehVqVUg0
+        QduhKqhMIa1S/Uerzi02f+b+B43VPSJ/quqUoxWaHH6eAEAGwLcIuN9P8gMHgEaskRHRARWppOVBBcof
+        FAo9bv5scoN+bkyV52v+AgABgOIAPUHSv0JwO0A79JpCOr97H3odAFsQPAA9Z2iBVDXL/HnvsTJdny0u
+        bZ8X52soAeB0IelHESQG8BHWn0Ff8jvoc4i35R0oAoBCC8AzUGZA3FNza80wzoN+aU4VUzvnAUBWAP1M
+        EaHwSD/iNwCMgMcwd2EGgPwY8z6IM1CP4GEHgDSVVjICgjblZpjhEgfNND8sLzf9KaZ2UBQgQjq+XB/I
+        J71PRfoRkAEOIVAPdBxrZMCxCK0AOSqJEJ65HgChZSmLlOVQE9q1lk5xuYkMgAvbSPCec3BUfRygG3Mf
+        nnsBgAy4usAKwGvOSgRrxYTIVmbNsNGxfK11o7jaosUA5I/lJLniGeBUPtYhOAA1YNrQAOhOEqACGYgB
+        8DMDpKt6wlaI620DACAGkBe3kTxTHC280RcSXWAF6EoSIBcqQV8owGzWgqEM9W8jOP2+N0W73rYUAxAT
+        KD5ojQuMLUEmTuSRhBvkviQBLEVo1UqaQpQW2uATv+5p0GbaKA4QL0KrC7bgq7H/pgtcGxEDVENIuWxG
+        6puxfhGqQwa4MWUmQsgM9ahP3Ojo9wLQBxHc6gIPAIlgxjsWnxFtJkCsBsJQlgUiXb3t02503HIFGCpN
+        dIEHAAfT0ZyMTugGUA6FEgAWGOC/NQAXaqPB7TZ0AdDRevVPsX4b4k7oBcAtejUL0icmd0hxqZ4kBx2v
+        IsEWxJ7HbcgAJwPRGuiC0IjkAQgBjdaLtf415lcQhGugBmucC54Az8YByCfHq0mOVaLYEHgkTPKHkjgA
+        V77xzsmG3Am5FeN0ZACxCzJdIHevA7DJCjARkWsBikmchf3sNvQA4NTzcSx2Yv2mBwC7YdWW0ofUL1gB
+        xEiZex/wAIifhrHgTgAlUKILFnziStMVMdVIYrKB5CRmhz5gB+Abkf4FxKfge9AbCMaXEHy9qHUA4K2J
+        tWGLZHpgDn2gvX69RhQH6EdRchG6NaJY+u0u2IxGZAselXIYx/CeRwGwGAfgLJyLGDWgY0t01AR/uezL
+        c7YhVzwcwLcg/UPM9j4AKNdWnF70lHEeiJnWUwYA23EIX2u3ob0PHIAO8TOC2mvADrDDGQCH0R0jOI/l
+        2d2pqAFht6EjAAeMXUicitAK8JJ5BjgBZAfzzfDRoU9EbnoCcCPqxXo9F8QAsPdaHuR0GmYHbpphVwdd
+        rXtMnq1YigPwPXAYQGzL4dLkbcgALUi923Gcqd6l3HCKGTZx0LlIDire2AoxEbn/PoDDSCDtrveBTFVQ
+        To739RwOqBQX6/5dtxHxrZj7wUF8MfoB77nRCV0uJCsIfi/gj5hhvAdN1z2Bm9GsI0Av7PgNXMBHL++1
+        /ULiACBykPagy3XcbdB0+CE5vnU/ABbjACc3I922PuAFwFfxQuU31z1PZtBY2QYUYY8cCC17XUisAFo5
+        3m1Vb2vVNqs9yKBB9Uk6nteJfZ8TB/13se/SuIAwAP973qouaLuUOa1ZOUINZodbd/h8/wMIjt+srqWG
+        IAAAAABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="Mst_Main.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
